--- a/RicosCafe/Scenes/Drinks/View/DrinkTableViewCell.xib
+++ b/RicosCafe/Scenes/Drinks/View/DrinkTableViewCell.xib
@@ -20,7 +20,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BHd-0a-Qh4">
-                        <rect key="frame" x="66" y="11" width="188" height="21"/>
+                        <rect key="frame" x="66" y="15" width="188" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="7JD-uJ-ste"/>
                         </constraints>
@@ -46,7 +46,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="khx-hD-SrZ">
-                        <rect key="frame" x="66" y="42" width="188" height="21"/>
+                        <rect key="frame" x="66" y="40.5" width="188" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="Fri-FZ-jCg"/>
                         </constraints>
@@ -62,11 +62,11 @@
                     <constraint firstItem="dql-LB-1Hp" firstAttribute="leading" secondItem="BHd-0a-Qh4" secondAttribute="trailing" constant="8" id="LOk-rk-Pqb"/>
                     <constraint firstAttribute="trailing" secondItem="dql-LB-1Hp" secondAttribute="trailing" constant="8" id="S15-oi-uXu"/>
                     <constraint firstItem="oLI-hZ-l9E" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="b5F-vZ-8QI"/>
-                    <constraint firstItem="BHd-0a-Qh4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="cin-IJ-7fs"/>
-                    <constraint firstItem="khx-hD-SrZ" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="gQH-ZQ-6zP"/>
+                    <constraint firstItem="BHd-0a-Qh4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="cin-IJ-7fs"/>
                     <constraint firstItem="oLI-hZ-l9E" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="pOb-cr-dGd"/>
                     <constraint firstAttribute="bottom" secondItem="oLI-hZ-l9E" secondAttribute="bottom" constant="11.5" id="r1h-p5-HRu"/>
                     <constraint firstItem="BHd-0a-Qh4" firstAttribute="leading" secondItem="oLI-hZ-l9E" secondAttribute="trailing" constant="8" id="tyW-3F-DZP"/>
+                    <constraint firstAttribute="bottom" secondItem="khx-hD-SrZ" secondAttribute="bottom" constant="12" id="v5C-aV-38i"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
