--- a/RicosCafe/Scenes/Products/View/ProductTableViewCell.xib
+++ b/RicosCafe/Scenes/Products/View/ProductTableViewCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProductCell" rowHeight="74" id="KGk-i7-Jjw" customClass="ProductTableViewCell" customModule="RicosCafe" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProductCell" rowHeight="80" id="KGk-i7-Jjw" customClass="ProductTableViewCell" customModule="RicosCafe" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -29,7 +29,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dql-LB-1Hp">
-                        <rect key="frame" x="262" y="26.5" width="50" height="21"/>
+                        <rect key="frame" x="262" y="26" width="50" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="62f-dy-wgf"/>
                             <constraint firstAttribute="width" constant="50" id="B2p-l4-vKo"/>
@@ -45,26 +45,34 @@
                             <constraint firstAttribute="width" constant="50" id="uXM-1e-uCi"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="khx-hD-SrZ">
-                        <rect key="frame" x="66" y="40.5" width="188" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="Fri-FZ-jCg"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="khx-hD-SrZ">
+                        <rect key="frame" x="66" y="40" width="188" height="21.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wqp-1B-AVH">
+                        <rect key="frame" x="0.0" y="72.5" width="320" height="1"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="KWu-UC-ztR"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="dql-LB-1Hp" firstAttribute="leading" secondItem="khx-hD-SrZ" secondAttribute="trailing" constant="8" id="1pX-Em-nw2"/>
                     <constraint firstItem="khx-hD-SrZ" firstAttribute="leading" secondItem="oLI-hZ-l9E" secondAttribute="trailing" constant="8" id="5Sn-2a-pff"/>
-                    <constraint firstItem="dql-LB-1Hp" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="BXJ-AF-BEx"/>
+                    <constraint firstAttribute="bottom" secondItem="wqp-1B-AVH" secondAttribute="bottom" id="6dY-aT-8Er"/>
+                    <constraint firstAttribute="trailing" secondItem="wqp-1B-AVH" secondAttribute="trailing" id="Aev-dN-8dV"/>
+                    <constraint firstItem="wqp-1B-AVH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Cgy-21-V7p"/>
+                    <constraint firstItem="dql-LB-1Hp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="26" id="KZ0-bu-dhW"/>
                     <constraint firstItem="dql-LB-1Hp" firstAttribute="leading" secondItem="BHd-0a-Qh4" secondAttribute="trailing" constant="8" id="LOk-rk-Pqb"/>
+                    <constraint firstItem="khx-hD-SrZ" firstAttribute="top" secondItem="BHd-0a-Qh4" secondAttribute="bottom" constant="4" id="LP6-gx-56F"/>
+                    <constraint firstAttribute="bottom" secondItem="wqp-1B-AVH" secondAttribute="bottom" id="M84-1s-Edg"/>
                     <constraint firstAttribute="trailing" secondItem="dql-LB-1Hp" secondAttribute="trailing" constant="8" id="S15-oi-uXu"/>
                     <constraint firstItem="oLI-hZ-l9E" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="b5F-vZ-8QI"/>
                     <constraint firstItem="BHd-0a-Qh4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="cin-IJ-7fs"/>
                     <constraint firstItem="oLI-hZ-l9E" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="pOb-cr-dGd"/>
-                    <constraint firstAttribute="bottom" secondItem="oLI-hZ-l9E" secondAttribute="bottom" constant="11.5" id="r1h-p5-HRu"/>
                     <constraint firstItem="BHd-0a-Qh4" firstAttribute="leading" secondItem="oLI-hZ-l9E" secondAttribute="trailing" constant="8" id="tyW-3F-DZP"/>
                     <constraint firstAttribute="bottom" secondItem="khx-hD-SrZ" secondAttribute="bottom" constant="12" id="v5C-aV-38i"/>
                 </constraints>
@@ -76,7 +84,7 @@
                 <outlet property="nameLabel" destination="BHd-0a-Qh4" id="fNb-gi-HZu"/>
                 <outlet property="priceLabel" destination="dql-LB-1Hp" id="uka-CW-aFj"/>
             </connections>
-            <point key="canvasLocation" x="-390" y="48"/>
+            <point key="canvasLocation" x="-390.39999999999998" y="44.977511244377816"/>
         </tableViewCell>
     </objects>
 </document>
