Adjusted font of price

--- a/RicosCafe/Scenes/Products/View/ProductTableViewCell.xib
+++ b/RicosCafe/Scenes/Products/View/ProductTableViewCell.xib
@@ -34,7 +34,7 @@
                             <constraint firstAttribute="height" constant="21" id="62f-dy-wgf"/>
                             <constraint firstAttribute="width" constant="50" id="B2p-l4-vKo"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -46,7 +46,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="khx-hD-SrZ">
-                        <rect key="frame" x="66" y="46" width="188" height="21"/>
+                        <rect key="frame" x="66" y="46" width="188" height="21.5"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
